--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,16 @@
         <maven.compiler.target>18</maven.compiler.target>
         <exec.mainClass>app.xforce.integradorjava.IntegradorJava</exec.mainClass>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
